Add bulk company import to GAIA funnel
